# sixel-rs

./: Cargo.toml
.github/workflows/: cd.yml  ci.yml
src/: encoder.rs  lib.rs  msc.rs  optflags.rs  pixelformat.rs  status.rs
